--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,14 @@
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
-            <version>1.4.12</version>
+            <version>1.5.6</version>
         </dependency>
 
-        <dependency>
-            <groupId>io.reactivex</groupId>
-            <artifactId>rxjava</artifactId>
-            <version>1.0.12</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.reactivex</groupId>-->
+            <!--<artifactId>rxjava</artifactId>-->
+            <!--<version>1.0.12</version>-->
+        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
